--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
   <!-- Link For Resct Bootstarp -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
+  <!-- Link For Font Awesome -->
+  <script src="https://kit.fontawesome.com/5a1ddf1742.js" crossorigin="anonymous"></script>
   <title>Alaa's Portfolio</title>
 </head>
 
